# aqshara

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.sisyphus/: boulder.json
apps/worker/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json
apps/worker/src/: index.ts  render-docx.test.ts  render-docx.ts  runtime-imports.test.ts
apps/worker/src/jobs/: export-docx-error-event.ts  export-docx-failure-strategy.ts  export-docx.test.ts  export-docx.ts  source-parse-error-event.ts  source-parse-failure-strategy.test.ts  source-parse-failure-strategy.ts  source-parse.test.ts  source-parse.ts
apps/worker/src/lib/: mistral-ocr.ts  pdf-text-extractor.ts  startup-dependencies.test.ts  startup-dependencies.ts  worker-runtime.test.ts  worker-runtime.ts
apps/worker/src/worker/: __init__.py  __main__.py  app.py  config.py  contracts.py  logging.py
apps/worker/src/worker/api/: __init__.py  health.py
apps/worker/src/worker/db/: __init__.py  connection.py  exports.py  sources.py
apps/worker/src/worker/jobs/: __init__.py  common.py  export_docx.py  mistral_ocr.py  parse_source.py  pdf_extractor.py  render_docx.py
apps/worker/src/worker/runtime/: dependencies.py  proxy.py  recovery.py
apps/worker/src/worker/storage/: service.py
apps/worker/tests/: test_app.py  test_config.py  test_export_docx.py  test_parse_source.py
docs/: OPERATIONAL PLAN.md  PRD.md  sprint-1-backend-operations.md  web-user-flow-sitemap.md
postman/: README.md  generate-assets.mjs  (+4 more)
(+333 files in other folders)
